need to fix image not fitting full height

--- a/style.css
+++ b/style.css
@@ -58,35 +58,104 @@ body {
   font-family: "Helvetica", "Arial", sans-serif;
   font-size: 16px;
   line-height: 1.3;
-  min-height: 95vh;
-  align-items: center;
+/*   min-height: 95vh;
+ */  align-items: center;
   justify-content: flex-start;
   margin: 0;
   padding: 0;
+
+  /* added */
+
+  height: 100vh;
+  min-height: 800px;
 
 }
 
 .container {
   display: flex;
-  justify-content: space-between;
+/*   justify-content: space-between;
+ */
+/*   added
+ */
+  justify-content: flex-start;
+  align-items: center;
+  gap: 45px;
+  width: 60%;
+  padding: 20px 0;
+  
 }
+
 
 .imageContainer {
+ /*  position: relative;
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
+ flex-direction: row; 
+  align-items: center;
+  padding: 2rem;
   margin: 0;
-  padding: 0;
-  text-align: center;
-  background-size: cover;
-  width: min(750px, 80%);
-  min-height: 100vh;
+  flex: 1;
+  height: 100vh;
+ */
+  position: relative;
+  flex: 1;
+  height: 100vh;
+  /* height: 100vh; 
+  width: 40%;
+  flex: 1
 }
 
-.imageContainer img {
-  width: 100%;
-  max-width: 100vh;
- 
+
+.slider-wrapper {
+  position: relative;
+  max-width: 48rem;
+  margin: 0 auto; /* center on page horizontally */
+}
+
+.slider {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+  border-radius: 0.5rem;
+}
+
+.slider::-webkit-scrollbar {
+  display: none;
+}
+
+
+.slider img {
+  flex: 1 0 100%; /* grow, shrink, basis */
+  scroll-snap-align: start;
+  object-fit: cover;
+}
+
+.slider-nav {
+  display: flex;
+  column-gap: 1rem;
+  position: absolute;
+  bottom: 5rem;
+  left: 50%;
+  opacity: 0.75;
+
+  transform: translateX(-50%);
+
+  z-index: 1;
+
+}
+
+.slider-nav a {
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.75;
+  transition: opacity ease 250ms;
+}
+
+.slider-nav a:hover {
+  opacity: 1;
 }
 
 .formContainer {
