--- a/style2.css
+++ b/style2.css
@@ -1,71 +1,47 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;    
 
 
+.container2 {
+    padding: 2rem;
 }
 
-body {
-    display: flex;
-    min-height: 100vh;
-    justify-content: center;
-    align-items: center;
-    background: #1c2841;
-
-}
-
-.formContainer {
-    width: 680px;
-    border-radius: 10px;
-
-}
-
-.entryArea {
-position: relative;
-height: 100px;
-line-height: 80px;
-margin-bottom: 90px;
-}
-
-input {
+.slider-wrapper {
     position: relative;
-    width: 100%;
-    outline: none;
-    font-size: 2.2em;
-    padding: 0 30px;
-    line-height: 80px;
-    border-radius: 10px;
-    border: 2px solid #f0ffff;
-    background: transparent;
-    transition: 0.1s ease;
+    max-width: 48rem;
+    margin: 0 auto; /* center on page horizontally */
+}
+
+.slider {
+    display: flex;
+    aspect-ratio: 9 / 16;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+    border-radius: 0.5rem;
+}
+
+.slider img {
+    flex: 1 0 100%; /* grow, shrink, basis */
+    scroll-snap-align: start;
+    object-fit: cover;
+}
+
+.slider-nav {
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 1;
 
 }
 
-.labelline{
-    position: absolute;
-    font-size: 1.6em;
-    color: white;
-    padding: 0 25px;
-    margin: 0 20px;
-    background-color: #1c2841;
-    transition: .3s ease;
-    z-index: 0;
-}
-
-input:focus,
-input:valid {
-color: #66ff00;
-border: 4px solid #66ff00;
-}
-
-input:focus + .labelline, 
-input:valid + .labelline {
-    color: #66ff00;
-    height: 30px;
-    line-height: 30px;
-    padding: 0 12px;
-    transform: translate(-15px, -16px) scale(.88);
-    z-index: 2;
+.slider-nav a {
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.75;
+    transition: opacity ease 250ms;
 }
